sock-shop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
spec:
  ingressClassName: nginx
  rules:
    - host: www.techniche.com.ng
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
        
  tls:
    - hosts:
        - www.techniche.com.ng
      secretName: techniche-tls-secret
